# bdc2026-stock-return-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  raw_get_stock_data_illustration.txt  requirements.txt  交付包说明.md  程序完善问题与解决方案清单.docx  项目完善修改添加建议报告_第三文档完善版.docx
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/: .dockerignore  .gitignore  Dockerfile  GUIDE.md  README.md  docker-compose.yml  get_stock_data.py  pyproject.toml  test.sh  train.sh
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/code/src/: config.py  model.py  predict.py  train.py  utils.py
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/data/: run.sh  split_train_test.py  test.csv
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/model/60_158+39/: config.json  final_score.txt  scaler.pkl
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/model/60_158+39/log/: events.out.tfevents.1773818230.MacBook-Pro-5.local  events.out.tfevents.1773818264.MacBook-Pro-5.local  events.out.tfevents.1773820841.MacBook-Pro-5.local  events.out.tfevents.1773826219.GPU01  events.out.tfevents.1773828131.GPU01  events.out.tfevents.1773842014.DESKTOP-3TU0KL3  events.out.tfevents.1773843912.DESKTOP-3TU0KL3  (+1 more)
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/output/: result.csv
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/temp/: tmp.csv
_case_zip/THU-BDC2026-82247deba1c7464295f66363efc94fd85549bfe0/test/: result.csv  score_docker.py  score_self.py  tar_files_list.txt  test.py  test_windows.py  赛事方测试方法.md
app/: test.ps1  (+9 more)
(+1454 files in other folders)
